<resources>
    <string name="app_name" translatable="false">Droidsor</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="updated">Updated</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="untitled_profile">Untitled profile</string>
    <string name="export_sensor">Export sensor</string>
    <string name="export_selected_sensors">Export selected sensors</string>
    <string name="export_selected_logs">Export selected logs</string>
    <string name="export_log_item">Export log item</string>
    <string name="profile_name">Profile Name</string>
    <string name="scan_gps_when_logging">Save GPS position</string>
    <string name="create_profile">Create Profile</string>
    <string name="pick_favorite_log">Pick Favorite Profile</string>
    <string name="favorite_log_picked">Favorite profile picked</string>
    <string name="connect_bt_device">Connect BT Device</string>
    <string name="no_favorite_log">No favorite profile set. Please pick profile at profile settings.</string>
    <string name="mobile_sensors">Mobile Sensors</string>
    <string name="bluetooth_sensors">Bluetooth Sensors</string>
    <string name="all_sensors">All Sensors</string>
    <string name="logged_sensors">Logged Sensors</string>
    <string name="management">Management</string>
    <string name="logging">Logging</string>
    <string name="saved_logs">Saved Logs</string>
    <string name="log_profile_settings">Profile Settings</string>
    <string name="unavailable_when_not_logging">Display mode unavailable when not logging</string>
    <string name="unavailable_when_logging">Display mode unavailable when logging</string>
    <string name="export_log">Export log</string>
    <string name="started_exporting">Started export of selected logs. We will inform you when exporting is done.</string>
    <string name="exporting_done">Exported file to folder </string>
    <string name="create_temp_profile" translatable="false">After you are finished with creating temporary profile, click save button and the logging will automatically start.</string>
    <string name="mark_more">Mark more</string>
    <string name="disconnect_from_bt_when_not_needed">Bluetooth power saving</string>
    <string name="disconnect_from_bt_when_not_needed_summary">Disconnects from Bluetooth device when it is not necessary for use.</string>
    <string name="wait_for_gps">Wait for GPS</string>
    <string name="wait_for_gps_summary">Ensures that logging will not start without known location</string>
    <string name="start_logging_button_behaviour">Log button behaviour</string>
    <string name="favorite_profile_gone">Profile doesn\'t exist anymore. Please select a new one</string>
    <string name="pick_profile_to_log">Select profile with which you want to start logging.</string>
    <string name="one_click_notification_exit">One click stop</string>
    <string name="one_click_notification_exit_summary">Allows to turn off the service from notification field with one click</string>
    <string name="choose_new_log_name">Choose new log name</string>
    <string name="rename">Rename</string>
    <string name="loading_sensor_items">Loading sensor items</string>
    <string name="no_logs">No log made yet</string>
    <string name="count_of_points">Point range at summary</string>
    <string name="count_of_points_summary">Range of points to display at chart summary. The more points to show the slower the loading of the log will be</string>
    <string name="waiting_for_gps">Waiting for GPS</string>
    <string name="waiting_for_gps_message">Do you wish to start log without GPS?</string>
    <string name="start_without_gps">Start without GPS</string>
    <string name="set">Set</string>
    <string name="connect_to_bluetooth_device">Connect to device</string>
    <string name="disconnect_from_bluetooth_device">Disconnect from device</string>
    <string name="three_d_view">3D View</string>
    <string name="deleted">Deleted</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="show_three_d_but">Show 3D View button</string>
    <string name="channel_description">Channel for service notification</string>
    <string name="permission_fine_location_not_granted">Permission not granted. Without this permission we cannot search for Bluetooth devices</string>
    <string name="service_is_off_resetting">Service is off. Please try it again</string>
    <string name="logging_on">App is logging. Service will keep running</string>
    <string name="permission_explain_write">This permission is required to store GPX file on SD card</string>
    <string name="droidsor_service">Droidsor service</string>
    <string name="service_is_running">Click to turn off the service</string>
    <string name="time">Time: </string>
    <string name="unknown_duration">Unknown duration</string>
    <string name="searching_data">Searching data&#8230;</string>
    <string name="fetching_data">Fetching data&#8230;</string>
    <string name="processing_data">Processing data&#8230;</string>
    <string name="showing_data">Showing data&#8230;</string>
    <string name="show_gps_data">Show GPS data</string>
    <string name="show_gps_data_sum">Shows GPS data as a sensor. May cause slightly higher battery consumption</string>
    <string name="explain_permissions">Explain permissions</string>
    <string name="allow_all">Allow all</string>
    <string name="location_permission">Location</string>
    <string name="record_audio">Record audio</string>
    <string name="write_to_external_storage">Write to external storage</string>
    <string name="permission_explanation"><b>Location:</b> Used to get location while logging, when displaying GPS data and for search of Bluetooth sensors.\n<b>Record audio:</b> Used to measure sound intensity.\n<b>Write to storage:</b> Used when the log is being exported to SD card.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="all_permissions_allowed">All permissions are allowed</string>
    <string name="permission_setting">Permission setting</string>
    <string name="permissions_required">App requires permissions to run properly. Set permissions?</string>
    <string name="notification_setting_fab_explanation"><b>Display value: </b>Shows this value in a notification panel. <b>Set threshold:</b> When sensor reaches this value mobile will vibrate.</string>
    <string name="notification_setting_fab_explanation_title">Parameter meanings</string>
    <string name="max_number_of_frac_decimals">Number of fraction decimals</string>
    <string name="max_number_of_frac_decimals_summary">Sets the count of numbers to be displayed for each sensor value behind decimal point. App restart may be required for changes to take effect.</string>
    <string-array name="log_but_beh_str_arr">
        <item>Start favorite log profile</item>
        <item>Show list with profiles</item>
    </string-array>
    <string-array name="log_but_beh_str_val" translatable="false">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="max_point_count_arr" translatable="false">
        <item>1 &#8211; 10</item>
        <item>10 &#8211; 100 </item>
        <item>100 &#8211; 1000</item>
        <item>1000 &#8211; 10000</item>
    </string-array>
    <string-array name="max_point_count_vals" translatable="false">
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
    </string-array>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop" translatable="false">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="barometer">Barometer</string>
    <string name="thermometer">Thermometer</string>
    <string name="optical">Optical</string>
    <string name="humidity">Humidity</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="gravity">Gravity</string>
    <string name="movement">Movement</string>
    <string name="orientation">Orientation</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="microphone">Microphone</string>
    <string name="battery">Battery</string>
    <string name="scheduled_log_end">Set log length</string>
    <string name="scheduled_log_end_summary">Allows you to end logging after specified while. Default time is one hour.</string>
    <string name="scheduled_log_time">Max log length</string>
    <string name="scheduled_log_time_summary">After the specified amount of minutes the log will stop.</string>
    <string name="use_bt_legacy">Use legacy Bluetooth</string>
    <string name="use_bt_legacy_sum">Allows to connect to Bluetooth device. This feature is not supported anymore and might cause unexpected behaviour.</string>
    <string name="notif_displ">Display senor data in notification</string>
    <string name="notif_displ_sum">Shows selected sensor data in a notification. Only works with screen on or while logging.</string>
    <string name="display_val">Display value</string>
    <string name="thresh_set">Set threshold</string>
    <string name="thresh_val_hint">Threshold value</string>
    <string name="notif_settings">Notification settings</string>
    <string-array name="tmp007_data_desc">
        <item>Ambient temperature:&#160;</item>
        <item>Object temperature:&#160;</item>
    </string-array>
    <string-array name="humidity_data_desc">
        <item>Air humidity:&#160;</item>
    </string-array>
    <string-array name="temperature_data_desc">
        <item>Ambient temperature:&#160;</item>
    </string-array>
    <string-array name="optical_data_desc">
        <item>Light level:&#160;</item>
    </string-array>
    <string-array name="pressure_data_desc">
        <item>Atmospheric pressure:&#160;</item>
    </string-array>
    <string-array name="gps_data_desc">
        <item>Longitude:&#160;</item>
        <item>Latitude:&#160;</item>
        <item>Altitude:&#160;</item>
    </string-array>
    <string-array name="battery_desc">
        <item>Temperature:&#160;</item>
        <item>Level:&#160;</item>
    </string-array>
    <string name="accelerometer_xml" translatable="false">accelerometer</string>
    <string name="gyroscope_xml" translatable="false">gyroscope</string>
    <string name="barometer_xml" translatable="false">barometer</string>
    <string name="thermometer_xml" translatable="false">thermometer</string>
    <string name="milliseconds" translatable="false">ms</string>
    <string name="accelerometer_internal">Accelerometer internal</string>
    <string name="accelerometer_external">Accelerometer external</string>
    <string name="gyroscope_internal">Gyroscope internal</string>
    <string name="gyroscope_external">Gyroscope external</string>
</resources>