<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="disconnect_from_bt"
        android:defaultValue="false"
        android:title="@string/disconnect_from_bt_when_not_needed"
        android:summary="@string/disconnect_from_bt_when_not_needed_summary" />
    <CheckBoxPreference
        android:key="wait_for_gps"
        android:defaultValue="false"
        android:title="@string/wait_for_gps"
        android:summary="@string/wait_for_gps_summary"
        />

    <CheckBoxPreference
        android:key="one_click_notification_exit"
        android:defaultValue="false"
        android:title="@string/one_click_notification_exit"
        android:summary="@string/one_click_notification_exit_summary" />
    <ListPreference
        android:key="start_log_but_behaviour"
        android:defaultValue="1"
        android:title="@string/start_logging_button_behaviour"
        android:entries="@array/log_but_beh_str_arr"
        android:entryValues="@array/log_but_beh_str_val"/>
    <ListPreference
        android:key="count_of_points"
        android:defaultValue="100"
        android:entries="@array/max_point_count_arr"
        android:entryValues="@array/max_point_count_vals"
        android:title="@string/count_of_points"
        android:summary="@string/count_of_points_summary"/>
    <CheckBoxPreference
        android:key="scheduled_log_end"
        android:defaultValue="false"
        android:title="@string/scheduled_log_end"
        android:summary="@string/scheduled_log_end_summary"
        />
    <EditTextPreference
        android:key="scheduled_log_end_time"
        android:defaultValue="60"
        android:inputType="number"
        android:dependency="scheduled_log_end"
        android:title="@string/scheduled_log_time"
        android:summary="@string/scheduled_log_time_summary"
        android:maxLength="3"
        />

    <EditTextPreference
        android:key="max_num_of_decimals"
        android:defaultValue="2"
        android:inputType="number"
        android:title="@string/max_number_of_frac_decimals"
        android:summary="@string/max_number_of_frac_decimals_summary"
        android:maxLength="1"
        />

    <CheckBoxPreference
        android:key="show_gps_data"
        android:defaultValue="true"
        android:title="@string/show_gps_data"
        android:summary="@string/show_gps_data_sum"
        />
    <CheckBoxPreference
        android:key="notification_display"
        android:defaultValue="false"
        android:title="@string/notif_displ"
        android:summary="@string/notif_displ_sum"
        />

    <CheckBoxPreference
        android:key="bt_legacy"
        android:defaultValue="false"
        android:title="@string/use_bt_legacy"
        android:summary="@string/use_bt_legacy_sum"
        />

</PreferenceScreen>