<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mobile_sensors"
            android:icon="@drawable/ic_mobile_sensors"
            android:title="@string/mobile_sensors" />
        <item
            android:id="@+id/ble_sensors"
            android:icon="@drawable/ic_ble_sensorss"
            android:title="@string/bluetooth_sensors" />
        <item
            android:id="@+id/all_sensors"
            android:icon="@drawable/ic_all_sensors"
            android:title="@string/all_sensors" />
        <item android:id="@+id/logged_sensors"
            android:icon="@drawable/ic_action_record"
            android:title="@string/logged_sensors"/>

    </group>

    <item android:title="@string/management">
        <menu>
            <item
                android:id="@+id/nav_logs"
                android:icon="@drawable/ic_settings"
                android:title="@string/saved_logs" />
            <item
                android:id="@+id/nav_log_profiles_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/log_profile_settings" />
        </menu>
    </item>


    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
