<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/check_mag"
        android:text="@string/magnetometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/check_acc"
        android:text="@string/accelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/check_gyr"
        android:text="@string/gyroscope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>