<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >
    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:hint="@string/profile_name"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/gps_freq_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/gps_freq_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/milliseconds"
            android:textColor="#000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/gps_freq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scan_gps_chbox"
        android:text="@string/scan_gps_when_logging"/>
</LinearLayout>